# sve_simulator

./: .pre-commit-config.yml  Dockerfile  Makefile  README.md  db.sqlite3  docker-compose.yml  docker-entrypoint.sh  manage.py  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.devcontainer/scripts/: post-create.sh
cards/: admin.py  urls.py
cards/migrations/: 0001_initial.py  0002_maindeckcard_card_attack_maindeckcard_card_class_and_more.py
cards/models/: __init__.py  base.py  main_deck_card.py
cards/serializers/: card_serializers.py
cards/views/: card.py
sve_simulator/: asgi.py  settings.py  urls.py  wsgi.py
