[project]
name = "sve_simulator"
version = 0.0.1
requires-python = "~=3.10"

[tool.ruff]
line-length = 120
target-version = "py310"
extend-exclude = ["migrations". "*.ipynb"]

[tool.ruff.lint]
ignore = [
    "E402",
    "E501"
]

[tool.coverage.report]
show_missing = true
skip_covered = true

#[tool.coverage.report]
